Trying whether using a forked build (1 process) will give enough HEAP to the integration tests.