@@ -497,6 +497,11 @@
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-failsafe-plugin</artifactId>
                         <version>2.19.1</version>
+                        <configuration>
+					        <forkCount>1</forkCount>
+					        <reuseForks>true</reuseForks>
+                            <argLine>-Xmx3g -Xms1g -XX:MaxPermSize=256m</argLine>
+                        </configuration>
                         <executions>
                             <execution>
                                 <id>integration-test</id>
